# pareidolia

./: .coverage  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/instructions/: implementation-workflow.instructions.md  version-control.instructions.md
src/pareidolia/: __init__.py  __main__.py  cli.py
src/pareidolia/core/: __init__.py  config.py  exceptions.py  models.py
src/pareidolia/generators/: __init__.py  cli_tools.py  exporter.py  generator.py  initializer.py  naming.py  prompt.py  variant_cache.py  variant_saver.py  variants.py
src/pareidolia/mcp/: __init__.py  __main__.py  prompts.py  server.py  tools.py
src/pareidolia/templates/: __init__.py  composer.py  engine.py  loader.py
src/pareidolia/templates/defaults/variant/: expand.md.j2  refine.md.j2  summarize.md.j2  update.md.j2
src/pareidolia/utils/: filesystem.py  github.py  validation.py
tests/: conftest.py
tests/fixtures/variants/: refine.md  summarize.md.jinja2  update.md.j2
tests/integration/: test_base_action_variants.py  test_export.py  test_frontmatter.py  test_generate.py  test_init.py  test_mcp_integration.py  test_save_command.py  test_variant_export.py
tests/unit/: test_cli_tools.py  test_composer.py  test_config.py  test_engine.py  test_exceptions.py  test_github.py  test_initializer.py  test_loader.py  test_mcp_prompts.py  test_mcp_server.py  test_mcp_tools.py  test_models.py  test_naming.py  test_validation.py  test_variant_cache.py  test_variant_saver.py  test_variants.py
